tests/paczka1/fuzzy1/22793194.err
Error in line 1: QhN A830 51,1
Error in line 3: QhN A974 33,1
Error in line 7: A830 S337 24,6
Error in line 20: RvaHOGn S337 90,6
Error in line 21: RvaHOGn A830 74,3
Error in line 28: RvaHOGn A713 77,1
Error in line 33: Be46zt7AS9 A713 11,1
Error in line 34: RvaHOGn A974 84,8
Error in line 27: tJSkDuG A713 51,4
